--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,10 @@ yarn-error.log*
 
 config.yaml
 recipient.json
+
+/config.yaml
+/recipient.json
+
+/config.yaml/
+/recipient.json/
 **/gulp/node_modules/
